src/objects/Quality_Rating__c.object
<CustomObject>
    <fields>
        <fullName>Aflatoxin_Rating__c</fullName>
        <label>Aflatoxin Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 10ppb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 10ppb</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Moisture_Content__c</fullName>
        <label>Moisture Content</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 13.5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exactly 13.5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 13.5%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 15%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than 15%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Percentage_Foreign_Matter__c</fullName>
        <label>Percentage Foreign Matter</label>
        <picklist>
            <picklistValues>
                <fullName>Grade 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Quality Rating</label>
    <nameField>
        <displayFormat>QR{00000}</displayFormat>
        <label>Quality Rating Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Ratings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>